--- a/requirements.txt
+++ b/requirements.txt
@@ -2,27 +2,42 @@ absl-py==1.4.0
 certifi==2023.7.22
 charset-normalizer==3.2.0
 cloudpickle==2.2.1
-dm-control==1.0.14
+contourpy==1.1.0
+cycler==0.11.0
+dm-control==1.0.15
 dm-env==1.6
 dm-tree==0.1.8
+etils==1.5.1
 Farama-Notifications==0.0.4
-fprs @ git+https://github.com/Co-Evolve/fprs@8ece86c73ddf13f03ea82c350cca1be02a6e778c
+fonttools==4.42.1
+fprs @ git+https://github.com/Co-Evolve/fprs@cf89b7c6e2d6417b4b7e7ea87f435ccc319ec12d
+fsspec==2023.9.2
 glfw==2.6.2
 gymnasium==0.29.0
 idna==3.4
+importlib-resources==6.1.0
+kiwisolver==1.4.5
 labmaze==1.0.6
 lxml==4.9.3
-mujoco==2.3.7
-mujoco-utils @ git+https://github.com/Co-Evolve/mujoco-utils@c5d8a23fbd08405a62186a49e14d27f874103650
+mujoco==3.0.0
+mujoco-utils @ git+https://github.com/Co-Evolve/mujoco-utils@1d11f2fbaf94982b5cc92b707bff08b35bd7b3b6
 numpy==1.25.2
+packaging==23.1
 perlin-noise==1.12
 Pillow==10.0.0
+platformdirs==3.10.0
+pooch==1.7.0
 protobuf==4.24.0
 PyOpenGL==3.1.7
 pyparsing==3.1.1
+python-dateutil==2.8.2
 requests==2.31.0
 scipy==1.11.1
+scooby==0.7.2
+six==1.16.0
 tqdm==4.66.1
 transforms3d==0.4.1
 typing_extensions==4.7.1
 urllib3==2.0.4
+vtk==9.2.6
+zipp==3.17.0
