--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,14 @@
-absl-py==2.0.0
-blinker==1.7.0
-brax==0.9.4
-certifi==2023.11.17
-charset-normalizer==3.3.2
-chex==0.1.85
-click==8.1.7
-cloudpickle==3.0.0
-contextlib2==21.6.0
-dm-control==1.0.16
-dm-env==1.6
-dm-tree==0.1.8
-etils==1.6.0
-Farama-Notifications==0.0.4
-Flask==3.0.0
-Flask-Cors==4.0.0
-flax==0.7.5
-fprs @ git+https://github.com/Co-Evolve/fprs@40ee809ca6ba15e66961d2153ee86e83550592c1
-fsspec==2023.12.2
-glfw==2.6.4
-grpcio==1.60.0
+dm_control==1.0.16
+fprs==0.1.0
 gym==0.26.2
-gym-notices==0.0.8
 gymnasium==0.29.1
-idna==3.6
-imageio==2.33.1
-importlib-resources==6.1.1
-itsdangerous==2.1.2
 jax==0.4.23
-jaxlib==0.4.23
-jaxopt==0.8.2
-Jinja2==3.1.2
-labmaze==1.0.6
-lxml==5.1.0
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-mdurl==0.1.2
-ml-collections==0.1.1
-ml-dtypes==0.3.2
-msgpack==1.0.7
 mujoco==3.1.1
-mujoco-mjx==3.1.1
-mujoco_utils @ git+https://github.com/Co-Evolve/mujoco-utils@cbfab78a9955d3d8361a1c3831059096be8c70f0
-nest-asyncio==1.5.8
+mujoco_mjx==3.1.1
+mujoco_utils==0.2.0
 numpy==1.26.3
-opencv-python==4.9.0.80
-opt-einsum==3.3.0
-optax==0.1.7
-orbax-checkpoint==0.4.8
-packaging==23.2
-perlin-noise==1.12
-pillow==10.2.0
-protobuf==4.25.1
-Pygments==2.17.2
-PyOpenGL==3.1.7
-pyparsing==3.1.1
-pytinyrenderer==0.0.14
-PyYAML==6.0.1
-requests==2.31.0
-rich==13.7.0
-scipy==1.11.4
-six==1.16.0
-tensorboardX==2.6.2.2
-tensorstore==0.1.52
-toolz==0.12.0
-tqdm==4.66.1
+opencv_python==4.9.0.80
+perlin_noise==1.12
+Pillow==10.2.0
+setuptools==69.0.3
 transforms3d==0.4.1
-trimesh==4.0.8
-typing_extensions==4.9.0
-urllib3==2.1.0
-Werkzeug==3.0.1
-zipp==3.17.0
