--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 dm_control==1.0.16
-fprs==0.1.0
+fprs @ git+https://github.com/Co-Evolve/fprs@40ee809ca6ba15e66961d2153ee86e83550592c1
 gym==0.26.2
 gymnasium==0.29.1
 jax==0.4.23
 mujoco==3.1.1
 mujoco_mjx==3.1.1
-mujoco_utils==0.2.0
+mujoco_utils @ git+https://github.com/Co-Evolve/mujoco-utils@e7c931ed2b7527c7f009d9a600c46d26f1f2c511
 numpy==1.26.3
 opencv_python==4.9.0.80
 perlin_noise==1.12
